# RedisAllocator-python

./: .buildinfo  .gitignore  .windsurfrules  AGENTS.md  BUGHUNT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  changelog.html  contributing.html  genindex.html  getting_started.html  git_history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.cursor/rules/: feat.mdc
.github/workflows/: docs.yml  publish.yml
_modules/: index.html
_modules/redis_allocator/: allocator.html  lock.html  task_queue.html
_sources/: changelog.rst.txt  contributing.rst.txt  getting_started.rst.txt  git_history.rst.txt  index.rst.txt  installation.rst.txt
_sources/api/: allocator.rst.txt  diagnostics.rst.txt  index.rst.txt  lock.rst.txt  task_queue.rst.txt
_sources/examples/: proxy_pool.rst.txt
api/: allocator.html  diagnostics.html  index.html  lock.html  task_queue.html
docs/: .gitignore  README.md
docs/source/: conf.py  (+3 more)
examples/: proxy_pool.html
redis_allocator/: __init__.py  allocator.py  lock.py  task_queue.py
tests/: _bughunt_helpers.py  _perf_real_redis.py  _profile_fakeredis.py  conftest.py  stress_pool_corruption.py  test_allocator.py  test_allocator_benchmark.py  test_allocator_bughunt.py  test_allocator_concurrency.py  test_allocator_forensics.py  test_allocator_fuzz.py  test_diagnostics_cli.py  test_diagnostics_collector.py  test_diagnostics_dashboard.py  test_diagnostics_invariants.py  test_diagnostics_models.py  test_lock.py  test_task_queue.py
(+15 files in other folders)
